# cc-screen-rust

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  HUB.md  PLAN.md  README.md  TUI_PLAN.md  build.sh  bump.sh  dist-workspace.toml  install.sh  release.sh
.claude/: settings.local.json
.claude/skills/environments/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: agent-image.yml  audit.yml  build-setup.yml  host-installers.yml  hub-image.yml  release.yml
crates/auth/: Cargo.toml
crates/auth/src/: headers.rs  lib.rs  netguard.rs  origin.rs  throttle.rs
crates/hub/: Cargo.toml
crates/hub/migrations/: 0001_init.sql  0002_device_enrollments.sql  0003_plan_limits.sql  README.md
crates/hub/src/: account.rs  assets.rs  bulk.rs  client_ws.rs  config.rs  db.rs  device.rs  handlers.rs  install.rs  lib.rs  main.rs  oauth.rs  registry.rs  service.rs  state.rs  summarizer.rs  uplink_server.rs  watch_ws.rs
crates/hub/tests/: e2e.rs  multi_tenant.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: hub.rs  lib.rs
crates/push/: Cargo.toml
crates/push/src/: lib.rs
crates/summary/: Cargo.toml
crates/summary/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: anchored_backend.rs  app.rs  cli.rs  config.rs  input.rs  layout.rs  main.rs  pane.rs  ready.rs  term.rs
crates/tui/src/client/: mod.rs  rest.rs  url.rs  ws.rs
crates/tui/src/ui/: grid.rs  mod.rs  overlay.rs  statusbar.rs  switcher.rs  util.rs
docker/agent/: .env.example  Dockerfile  README.md  docker-compose.yml
docker/hub/: .env.example  Dockerfile  README.md  docker-compose.yml
docs/: app.js  index.html  styles.css
docs/assets/: index-BCoNqOU_.js  index-BPs63_kx.css  index-C9ylWAWi.css  index-D4czeu4K.js  index-DfteCF0Z.js  index-Q4ivXN_H.css  index-oU0DNJlY.js
examples/: hub_attach_smoke.rs  hub_watch_smoke.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/public/: push-sw.js
frontend/src/: App.tsx  api.test.ts  api.ts  icons.tsx  index.css  paneState.test.ts  paneState.ts  push.ts  readyEdges.test.ts  readyEdges.ts  recents.ts  util.test.ts  util.ts
frontend/src/components/: AgentMirror.tsx  ComposeSheet.tsx  ContextMenu.tsx  ControlBar.tsx  CreateSession.tsx  EditorOverlay.tsx  EditorTree.tsx  FavoritesSheet.tsx  ImageSheet.tsx  LayoutPalette.tsx  LayoutPicker.tsx  LoginScreen.tsx  MarkdownEditor.tsx  MoveDialog.tsx  MultiTenant.tsx  NewSessionPanel.tsx  NotificationsButton.tsx  PdfViewer.tsx  SessionDrawer.test.tsx  SessionDrawer.tsx  StatusView.tsx  SummaryTip.tsx  TerminalView.tsx  TileGrid.tsx  ToastHost.tsx  ToastsButton.tsx  UploadSheet.tsx  agentMirror.test.ts  dirTree.test.ts  dirTree.tsx  useFileWatch.ts  viewerState.ts
frontend/src/editor/: codeHighlight.test.ts  codeHighlight.ts  findInFile.test.ts  findInFile.ts  livePreview.test.ts  livePreview.ts  markdown.ts
frontend/tools/: gen-icons.mjs  smoke.mjs
scripts/: clip-shim.sh  hubctl.sh  install-machine.sh
site/: .dibblaignore  .dockerignore  .gitignore  APP.md  Cargo.toml  Dockerfile  README.md  REVIEW.md  deploy.sh  release-host.sh
site/src/: main.rs
site/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
site/web/src/: App.tsx  assets.ts  index.css
site/web/src/components/: Apps.tsx  Features.tsx  Footer.tsx  Hero.tsx  Nav.tsx  Start.tsx  ui.tsx
src/: attach.rs  auth.rs  bulk.rs  clip.rs  config.rs  confine.rs  dirsearch.rs  engine.rs  enroll.rs  fileops.rs  files.rs  handlers.rs  main.rs  manifest.rs  ops.rs  push.rs  render.rs  service.rs  summary.rs  tools.rs  uplink.rs  upload.rs  watch.rs
