# The root package (the server) doubles as the Cargo workspace root so the
# rust-embed path, build.sh/install.sh, and the systemd unit don't move. The
# shared wire types live in crates/protocol; the terminal client in crates/tui.
[workspace]
members = ["crates/protocol", "crates/tui"]
resolver = "2"

[package]
name = "cc-screen-rust"
version = "0.1.0"
edition = "2021"
description = "Web-only, tmux-free engine for driving AI coding CLIs from a phone"

[[bin]]
name = "cc-screen-rust"
path = "src/main.rs"

[dependencies]
cc-screen-protocol = { path = "crates/protocol" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
futures-util = "0.3"
portable-pty = "0.8"
# Server-side terminal emulator: interprets the PTY byte stream into a grid +
# scrollback so (re)attach can be served as a clean, size-agnostic repaint
# instead of replaying the raw size-locked byte history (which duplicated /
# staircased at any client size != the size that produced it). Same crate the
# `ccs` TUI renders with, so behaviour matches across clients.
alacritty_terminal = "0.26"
rust-embed = { version = "8", features = ["mime-guess"] }
# Real-time filesystem watching for the editor (inotify on Linux), debounced so
# an agent/editor writing a file in several syscalls collapses to one event.
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"

[profile.release]
opt-level = 2
