# The root package (the server) doubles as the Cargo workspace root so the
# rust-embed path, build.sh/install.sh, and the systemd unit don't move. The
# shared wire types live in crates/protocol; the terminal client in crates/tui.
[workspace]
members = ["crates/protocol", "crates/tui"]
resolver = "2"

[package]
name = "cc-screen-rust"
version = "0.2.1"
edition = "2021"
description = "Web-only, tmux-free engine for driving AI coding CLIs from a phone"

# The server is distributed too, but it embeds the frontend via rust-embed, so the
# release CI must build frontend/dist BEFORE `dist build` — wired through the
# `github-build-setup` hook in dist-workspace.toml. The binary self-installs its
# service (`cc-screen-rust install`, systemd on Linux / launchd on macOS).
[package.metadata.dist]
dist = true

[[bin]]
name = "cc-screen-rust"
path = "src/main.rs"

[dependencies]
cc-screen-protocol = { path = "crates/protocol" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
futures-util = "0.3"
portable-pty = "0.8"
# Server-side terminal emulator: interprets the PTY byte stream into a grid +
# scrollback so (re)attach can be served as a clean, size-agnostic repaint
# instead of replaying the raw size-locked byte history (which duplicated /
# staircased at any client size != the size that produced it). Same crate the
# `ccs` TUI renders with, so behaviour matches across clients.
alacritty_terminal = "0.26"
rust-embed = { version = "8", features = ["mime-guess"] }
# Real-time filesystem watching for the editor (inotify on Linux), debounced so
# an agent/editor writing a file in several syscalls collapses to one event.
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
# Web Push ("agent finished" phone notifications). web-push-native is pure-Rust
# (RustCrypto + jwt-simple) — unlike the `web-push` crate, whose `ece` dep needs
# system OpenSSL this box doesn't have. It builds the VAPID-signed, aes128gcm
# `http::Request`; we send it with ureq (pure-Rust rustls+ring, no system deps).
# p256 generates the VAPID P-256 keypair in-process.
web-push-native = "0.4"
ureq = "2"
p256 = "0.13"
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
http = "1"

[profile.release]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
