# The root package (the server) doubles as the Cargo workspace root so the
# rust-embed path, build.sh/install.sh, and the systemd unit don't move. The
# shared wire types live in crates/protocol; the terminal client in crates/tui.
[workspace]
members = ["crates/protocol", "crates/auth", "crates/push", "crates/tui", "crates/hub"]
resolver = "2"

[package]
name = "cc-screen-rust"
version = "0.3.12"
edition = "2021"
description = "Web-only, tmux-free engine for driving AI coding CLIs from a phone"

# The server is distributed too, but it embeds the frontend via rust-embed, so the
# release CI must build frontend/dist BEFORE `dist build` — wired through the
# `github-build-setup` hook in dist-workspace.toml. The binary self-installs its
# service (`cc-screen-rust install`, systemd on Linux / launchd on macOS).
[package.metadata.dist]
dist = true

[[bin]]
name = "cc-screen-rust"
path = "src/main.rs"

[features]
default = ["frontend"]
# Embed the React PWA into the binary (via rust-embed). On by default. A fleet
# agent that only talks to a hub can build headless with `--no-default-features`
# — no `frontend/dist` and no rust-embed compile. The hub embeds the frontend.
frontend = ["dep:rust-embed"]

[dependencies]
# `hub` enables the agent↔hub envelope (used by src/uplink.rs).
cc-screen-protocol = { path = "crates/protocol", features = ["hub"] }
# Shared opt-in auth (Auth struct, signed session cookies, token matching). The
# agent keeps the axum `require_auth` middleware locally (see src/auth.rs).
cc-screen-auth = { path = "crates/auth" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
futures-util = "0.3"
# Outbound WebSocket client for the hub uplink (src/uplink.rs). Same pure-Rust
# rustls stack the TUI uses, so no system TLS deps.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
# `ServiceExt::oneshot` to replay a hub-relayed bulk request against the agent's
# own file-transfer router (src/bulk.rs) — true parity, real handlers.
tower = { version = "0.5", features = ["util"] }
portable-pty = "0.8"
# Server-side terminal emulator: interprets the PTY byte stream into a grid +
# scrollback so (re)attach can be served as a clean, size-agnostic repaint
# instead of replaying the raw size-locked byte history (which duplicated /
# staircased at any client size != the size that produced it). Same crate the
# `ccs` TUI renders with, so behaviour matches across clients.
alacritty_terminal = "0.26"
rust-embed = { version = "8", features = ["mime-guess"], optional = true }
# Real-time filesystem watching for the editor (inotify on Linux), debounced so
# an agent/editor writing a file in several syscalls collapses to one event.
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mime_guess = "2"
# Web Push ("agent finished" phone notifications). The VAPID + aes128gcm send
# machinery lives in cc-screen-push (shared with the hub); the agent keeps the
# busy→waiting sweep (push::finish_watcher).
cc-screen-push = { path = "crates/push" }
http = "1"

[profile.release]
opt-level = 2

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
