# The aggregator. Agents dial IN over a WebSocket (`/agent/ws`) and register;
# clients (PWA + `ccs`) hit the same client-facing wire contract the agent serves,
# but the hub routes each request to the owning agent. The hub owns NO PTY and NO
# filesystem — it's a registry + auth gate + transparent byte relay.
[package]
name = "cc-screen-hub"
version = "0.3.51"
edition = "2021"
description = "Aggregator hub for cc-screen-rust: one endpoint over many agents"

# Cross-built + shipped by `dist` like the server: embeds frontend/dist (built
# first by the github-build-setup step). Produces cc-screen-hub-installer.sh,
# re-hosted on the site as /dl/install-cc-screen-hub.sh.
[package.metadata.dist]
dist = true

[[bin]]
name = "cc-screen-hub"
path = "src/main.rs"

[features]
# The multi-tenant SaaS superset (proposal 0001). OFF by default: a plain
# single-tenant hub never compiles sqlx/Postgres, the device-flow handlers, or
# any per-tenant code, and behaves byte-for-byte as today. The SaaS hub is this
# *same* crate built with `--features multi-tenant`, not a fork — every other PR
# must keep the default (no-feature) build green.
multi-tenant = ["dep:sqlx", "dep:argon2", "dep:async-trait"]

[dependencies]
# `hub` brings in the agent↔hub envelope. The hub reuses the client-facing wire
# types (SessionInfo, …) and cc-screen-auth verbatim.
cc-screen-protocol = { path = "../protocol", features = ["hub"] }
cc-screen-auth = { path = "../auth" }
# Centralized Web Push: one VAPID keypair + sub store for the whole fleet.
cc-screen-push = { path = "../push" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
mime_guess = "2"
# The hub serves the same embedded React PWA as the agent, so the phone opens the
# hub URL and gets the UI. Same frontend/dist the agent embeds (built first).
rust-embed = { version = "8", features = ["mime-guess"] }
# Session summaries (proposal 0022): the hub is the canonical keyholder + spend
# gate and makes the Haiku call via the shared summarizer (raw POST /v1/messages).
cc-screen-summary = { path = "../summary" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Multi-tenant store (proposal 0001), behind the `multi-tenant` feature. Optional
# + off by default, so the single-tenant hub never pulls it in. The backend is
# pluggable behind a store trait (like `AgentTokens`): SQLite is the first driver
# (file-backed, zero-ops for dev + small single-node installs); a Postgres driver
# can be added later as a second impl without touching callers.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"], optional = true }
# argon2id password hashing/verify for multi-tenant accounts (proposal 0001 §3.2).
argon2 = { version = "0.5", optional = true }
# async methods on the `db::Store` trait object (dyn dispatch needs boxing).
async-trait = { version = "0.1", optional = true }

[dev-dependencies]
# In-process e2e: a fake agent + a fake client over loopback WebSockets, and HTTP
# assertions. Same pure-Rust rustls stack as the TUI; no system TLS.
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
