[package]
name = "cc-screen-protocol"
version = "0.3.3"
edition = "2021"
description = "Shared wire types for cc-screen-rust (server + TUI client)"

[features]
default = []
# The agent↔hub envelope (`src/hub.rs`). Enabled by the agent and the hub, not the
# TUI, so a standalone `ccs` build doesn't compile the hub wire types. Adds no
# dependencies — the framing is manual length-prefixing over serde_json, both of
# which are already present.
hub = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
