[package]
name = "cc-screen-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal client for cc-screen-rust"

[[bin]]
name = "ccs"
path = "src/main.rs"

[dependencies]
cc-screen-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
alacritty_terminal = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
