[package]
name = "cc-screen-tui"
version = "0.3.48"
edition = "2021"
description = "Terminal client for cc-screen-rust"
repository = "https://github.com/dibbla-agents/cc-screen-rust"

# `ccs` is the pure-Rust, rustls-based terminal client — the one binary we ship
# as cross-platform release artifacts (mac + linux) for the `curl | sh` installer.
[package.metadata.dist]
dist = true

[[bin]]
name = "ccs"
path = "src/main.rs"

[dependencies]
cc-screen-protocol = { path = "../protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
alacritty_terminal = "0.26"
unicode-width = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
